chore: Add redirect from /e/* to /events/*

--- a/firebase.json
+++ b/firebase.json
@@ -24,6 +24,11 @@
         "type": 302
       },
       {
+        "source": "/e/:path*",
+        "destination": "/events/:path*",
+        "type": 302
+      },
+      {
         "source": "/about",
         "destination": "/profile",
         "type": 302
