chore: Add Google API key to CI deploy

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -89,6 +89,8 @@ jobs:
 
       - name: Build
         run: yarn generate
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
       - name: Deploy
         run: yarn run deploy --token=${{ secrets.FIREBASE_TOKEN }}
