--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [dev, master]
+    branches: [dev, master, 'renovate/*']
   pull_request:
-    branches: [dev]
+    branches: [dev, '!renovate/*']
   workflow_dispatch:
 
 jobs:
