--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,9 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "labels": ["dependencies"],
   "lockFileMaintenance": { "enabled": true },
+  "stabilityDays": 7,
   "packageRules": [
     {
       "matchUpdateTypes": [
