chore: Set schedule for renovate checks

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,6 +3,9 @@
   "extends": ["config:base"],
   "labels": ["dependencies"],
   "lockFileMaintenance": { "enabled": true },
+  "schedule": [
+    "* 3 5 * *"
+  ],
   "packageRules": [
     {
       "matchUpdateTypes": [
