--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,12 +2,13 @@ name: CI
 
 on:
   push:
-    branches: [dev, master, 'renovate/*']
+    branches: [dev, 'renovate/*']
   pull_request:
-    branches: [dev, '!renovate/*']
+    branches: [dev]
 
 jobs:
   lint:
+    if: github.event_name != 'pull_request' || !startsWith(github.head_ref, 'renovate/')
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +25,7 @@ jobs:
         run: yarn lint
 
   build:
+    if: github.event_name != 'pull_request' || !startsWith(github.head_ref, 'renovate/')
     runs-on: ubuntu-latest
 
     steps:
