chore: Upgrade Node.js, Nuxt and TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
       "@/*": ["./src/*"]
     },
     "types": ["@types/resize-observer-browser", "@nuxt/types", "@nuxt/content"]
-  }
+  },
+  "exclude": ["node_modules", ".nuxt", "dist"]
 }
