--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@nuxt/content": "1.15.1",
-    "@nuxt/types": "2.15.8",
+    "@nuxt/types": "2.17.2",
     "@nuxtjs/google-analytics": "2.4.0",
     "@nuxtjs/gtm": "2.4.0",
     "@nuxtjs/sitemap": "2.4.0",
     "normalize.css": "8.0.1",
-    "nuxt": "2.15.8"
+    "nuxt": "2.17.2"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "2.1.0",
+    "@nuxt/typescript-build": "3.0.2",
     "@types/resize-observer-browser": "0.1.11",
     "@types/sharp": "0.31.1",
     "@typescript-eslint/eslint-plugin": "5.43.0",
@@ -52,6 +52,7 @@
     "sass-loader": "10.4.1",
     "sharp": "0.32.6",
     "simple-git": "3.16.0",
+    "typescript": "^5.3.3",
     "vue-eslint-parser": "9.3.2",
     "vue-property-decorator": "9.1.2"
   },
@@ -64,5 +65,8 @@
   "lint-staged": {
     "*.{ts,js,vue}": "eslint --cache --fix",
     "*.{ts,js,vue,md,yml,json}": "prettier --write"
+  },
+  "resolutions": {
+    "**/@nuxt/types": "^2.17.2"
   }
 }
